Jokes generator, when fetching thunk is used to set a fetching status while waiting for data

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,17 @@
 .App {
   text-align: center;
+  color: white;
+}
+
+.title {
+  height: 5rem;
+  padding-top: 1.5rem;
+}
+
+h1 {
+  font-size: 3rem;
+  font-family: sans-serif;
+  color: ;
 }
 
 .App-logo {
